k8s/namespaces/media/requestrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestrr
  namespace: media
  labels:
    app.kubernetes.io/name: requestrr
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: requestrr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: requestrr
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      automountServiceAccountToken: false
      containers:
        - name: requestrr
          # renovate: datasource=docker depName=docker.io/thomst08/requestrr
          image: docker.io/thomst08/requestrr:latest@sha256:74392e2e633b8c574aa93a93945e5ed481df5059441cc31d120796a72e3a7ff2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4545
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2000m"
              memory: "2048Mi"
              ephemeral-storage: "5Gi"
          livenessProbe:
            tcpSocket:
              port: 4545
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 4545
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /root/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: requestrr-config
