k8s/namespaces/media/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr
  namespace: media
  labels:
    app.kubernetes.io/name: requestrr
spec:
  selector:
    app.kubernetes.io/name: requestrr
  ports:
    - port: 4545
      targetPort: 4545
      protocol: TCP
      name: requestrr-ui
  type: ClusterIP
