k8s/namespaces/media/requestrr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-requestrr-https
  namespace: media
  labels:
    app.kubernetes.io/name: requestrr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.hosted.fail`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: requestrr
          port: 4545
  tls: 
    secretName: hosted-fail-tls
